enhance examples - produce garbage automatically